# nccl-study

./: .gitignore  .gitmodules  README.md
interconnect/l20/: CMakeLists.txt  README.md  topology.md
interconnect/l20/src/: README.md  p2p_capabilities.cu  p2p_copy.cu  remote_memory_kernel.cu
launcher/: CMakeLists.txt
launcher/python/: __init__.py  cumem.py  ipc.py  launcher.py
launcher/src/: cumem_utils.cu  ipc_utils.cu
launcher/stubs/: cumem_utils.pyi  ipc_utils.pyi  ring_buffer_p2p_ipc.pyi
primitives/l20/: CMakeLists.txt  README.md
primitives/l20/design/: ring_buffer_p2p_2node.md
primitives/l20/python/: run_ring_buffer_p2p.py  run_ring_buffer_p2p_cumem.py
primitives/l20/src/: ring_buffer_p2p_2node.cu  ring_buffer_p2p_2node_ipc.cu
scripts/: prepare_env.sh
